# Ergo-Personal-Based-LLM-ML-Assistant

./: .gitignore  README.md
ergo/: .env.template  .gitignore  CLEANUP_SUMMARY.md  Cargo.toml  QUICKSTART.md  README.md  ROADMAP.md  UPGRADE_GUIDE.md  flake.nix  proj_ergo_arch.md  run-all.sh  run-orchestrator.sh  run-ui.sh  shell.nix
ergo/config/: ergo.toml  permissions.toml  routes.toml
ergo/docs/: ARCHITECTURE.md  DOCUMENTATION_MAP.md  README.md  WORK_MODE_IMPLEMENTATION_STATUS.md  ergo_work_mode_architecture.txt
ergo/docs/journal/: 2026-03-25-project-epic-setup-complete.md
ergo/docs/permissions/: PERMISSIONS.md  SCANNING_AUTHORITY_SUMMARY.md
ergo/docs/reference/: BUILD_STATUS.md  PERMISSIONS_QUICKREF.txt  ROADMAP.md  WORK_MODE_ARCHITECTURE.md  WORK_MODE_IMPLEMENTATION.md  WORK_MODE_IMPLEMENTATION_STATUS.md
ergo/docs/setup/: INSTALL.md  NEOVIM_SETUP.md  NIXOS_SETUP.md  QUICKSTART.md  RUNNING.md  RUNNING_WITHOUT_NIX.md  RUN_NOW.md  SETUP_PERMISSIONS.md  START_HERE.md
ergo/nvim-plugin/plugin/: ergo.vim
ergo/orchestrator/: __init__.py  init_db.py  list_models.py  requirements.txt
ergo/orchestrator/src/: __init__.py  config.py  context_builder.py  main.py  memory_manager.py  model_router.py
ergo/party-agent-system/: README.md
ergo/party-agent-system/coordination/: heroes_journey.py
ergo/party-agent-system/optimization/: token_manager.py
ergo/scripts/: check-permissions.sh  deploy_work_mode.sh  setup.sh
ergo/src/: context.rs  database.rs  database_v2.rs  event_emitter.rs  lib.rs  main.rs  models.rs  privacy.rs  window_monitor.rs
(+102 files in other folders)
